Align author image and information correctly

--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@
 *::after {
   box-sizing: border-box;
 }
+
 /*
     2. Remove default margin
   */
 * {
   margin: 0;
 }
+
 /*
     3. Allow percentage-based heights in the application
   */
@@ -19,6 +21,7 @@ html,
 body {
   height: 100%;
 }
+
 /*
     Typographic tweaks!
     4. Add accessible line-height
@@ -28,6 +31,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
+
 /*
     6. Improve media defaults
   */
@@ -39,6 +43,7 @@ svg {
   display: block;
   max-width: 100%;
 }
+
 /*
     7. Remove built-in form typography styles
   */
@@ -48,6 +53,7 @@ textarea,
 select {
   font: inherit;
 }
+
 /*
     8. Avoid text overflows
   */
@@ -60,6 +66,7 @@ h5,
 h6 {
   overflow-wrap: break-word;
 }
+
 /*
     9. Create a root stacking context
   */
@@ -67,6 +74,7 @@ h6 {
 #__next {
   isolation: isolate;
 }
+
 :root {
   --cc-dark-grayish-blue: hsl(217, 19%, 35%);
   --cc-dark-blue: hsl(214, 17%, 51%);
@@ -77,60 +85,74 @@ h6 {
   --fw-regular: 500;
   --fw-bolder: 700;
 }
+
 body {
   display: grid;
   place-items: center;
   background-color: var(--cc-light-grayish-blue);
   font-family: var(--ff-manrope, sans-serif);
 }
+
 .article {
   max-width: 80%;
   border-radius: 0.5rem;
   overflow: hidden;
 }
+
 .article__information {
   padding: 2rem;
   font-size: 13px;
   display: grid;
   gap: 1rem;
 }
+
 .article__title {
   opacity: 0.8;
 }
+
 .article__description {
   opacity: 0.6;
 }
+
 .hide-author {
   display: none;
 }
+
 .hide-share-desktop {
   display: none;
 }
+
 .article__share-mobile {
   background-color: var(--cc-dark-grayish-blue);
 }
+
 .article__information {
   background-color: white;
 }
+
 .article__share-mobile {
   display: flex;
   justify-content: space-around;
   padding: 1.2rem 1rem;
 }
+
 .share-mobile__icon {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
+
 .icon-mobile__share {
   font-size: 13px;
   letter-spacing: 0.5rem;
   color: var(--cc-light-grayish-blue);
   opacity: 0.4;
 }
+
 .share-mobile__icon img {
   margin: 0rem 0.5rem;
 }
+
 .mobile__share-img {
   background-color: white;
   padding: 0.12rem;
@@ -138,4 +160,48 @@ body {
   height: 1.35rem;
   border-radius: 50%;
   cursor: pointer;
+}
+
+/* for destop  media size >= 1024 */
+@media only screen and (min-width: 1024px) {
+  .article {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .hide-share-mobile {
+    display: none;
+  }
+
+  .hide-author {
+    display: flex;
+  }
+
+  .article__author {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .article__author-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  .share-arrow-destop {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+  }
+
+  .article__author-img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+
+
+
 }
